--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,8 +18,7 @@ const {
 } = Astro.props;
 ---
 
-<!-- Google Tag Manager -->
-<!-- <script type="text/partytown">
+<!-- Google Tag Manager --><!-- <script type="text/partytown">
   (function (w, d, s, l, i) {
     w[l] = w[l] || [];
     w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -81,15 +80,15 @@ const {
 
   injectScripts();
 </script>
-<!-- End of New GTM Test 2 --><!-- The next line enables the indexing by robots on the page level -->
+<!-- End of New GTM Test 2 -->
+
+<!-- The next line enables the indexing by robots on the page level -->
 <meta name="robots" content={robots} />
 
 <!-- Google Adsense -->
-<script
-  async
-  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
-  crossorigin="anonymous"
-></script>
+<!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320"
+     crossorigin="anonymous"></script> -->
+<script>let lazyloadads=!1;window.addEventListener("scroll",function(){(0!=document.documentElement.scrollTop&&!1===lazyloadads||0!=document.body.scrollTop&&!1===lazyloadads)&&(!function(){let e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9621814408753320";let t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}(),lazyloadads=!0)},!0);</script>
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
@@ -97,7 +96,7 @@ const {
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Primary Meta Tags -->
+<!-- P/rimary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
