--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -165,7 +165,7 @@ if (
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
-<!-- P/rimary Meta Tags -->
+<!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
