--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -106,6 +106,9 @@ const {
               <i class="fa-brands fa-facebook"></i>
             </a>
           </span>
+          <span class="mastodon">
+             <a class="btn text-white" href="https://donshare.net/share.html?text=" style="background-color: #2b90d9;" onclick="window.open(this.href+encodeURI(decodeURI(document.title))+'&url='+encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false;"><i class="fab fa-mastodon fa-fw"></i> トゥート！</a>
+          <span>
           <span class="line">
             <a
               href={`http://line.me/R/msg/text/?${
@@ -173,6 +176,9 @@ const {
             <i class="fa-brands fa-facebook"></i>
           </a>
         </span>
+        <span class="mastodon">
+          <a class="btn text-white" href="https://donshare.net/share.html?text=" style="background-color: #2b90d9;" onclick="window.open(this.href+encodeURI(decodeURI(document.title))+'&url='+encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false;"><i class="fab fa-mastodon fa-fw"></i> トゥート！</a>
+        <span>
         <span class="line">
           <a
             href={`http://line.me/R/msg/text/?${
