--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -189,24 +189,7 @@ if (
 />
 
 <!-- font awesome -->
-<link
-  rel="preload"
-  href="/fontawesome-free-6.3.0-web/css/solid.min.css"
-  as="style"
-  onload="this.onload = null; this.rel = 'stylesheet'"
-/>
-<link
-  rel="preload"
-    href="/fontawesome-free-6.3.0-web/css/fontawesome.min.css"
-  as="style"
-  onload="this.onload = null; this.rel = 'stylesheet'"
-/>
-<link
-  rel="preload"
-    href="/fontawesome-free-6.3.0-web/css/brands.min.css"
-  as="style"
-  onload="this.onload=null;this.rel='stylesheet'"
-/>
+<script src="https://kit.fontawesome.com/feb704a0d8.js" crossorigin="anonymous"></script>
 
 <!-- rss feed -->
 <link
