--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,13 +16,13 @@ const { contents: links } = await cmsBlog.getLinks({
 ---
 
 <!-- Google Tag Manager (noscript) -->
-<noscript
+<!-- <noscript
   ><iframe
     src="https://www.googletagmanager.com/ns.html?id=GTM-WM9326C"
     height="0"
     width="0"
     style="display:none;visibility:hidden"></iframe></noscript
->
+> -->
 <!-- End Google Tag Manager (noscript) -->
 <header>
   <div class="navbar">
