--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -92,7 +92,7 @@ const {
               rel="noopener noreferrer"
               aria-label="Twitter"
             >
-              <i class="fab fa-twitter"></i>
+              <i class="fa-brands fa-x-twitter"></i>
             </a>
           </span>
           <span class="facebook">
@@ -162,7 +162,7 @@ const {
             rel="noopener noreferrer"
             aria-label="Twitter"
           >
-            <i class="fab fa-twitter"></i>
+            <i class="fa-brands fa-x-twitter"></i>
           </a>
         </span>
         <span class="facebook">
