fix font awesame

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -189,7 +189,7 @@ if (
 />
 
 <!-- font awesome -->
-<script src="https://kit.fontawesome.com/feb704a0d8.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- rss feed -->
 <link
