--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -120,6 +120,7 @@ const {
               class="btn text-white"
               href="https://donshare.net/share.html?text="
               onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
+              aria-label="Mastodon"
             >
               <i class="fab fa-mastodon fa-fw"></i>
             </a>
@@ -128,7 +129,8 @@ const {
             <a
               href="https://misskeyshare.link/share.html?text="
               onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-              ><img src="/mi.webp" style="" /></a
+              aria-label="Misskey"
+              ><img src="/mi.webp" style="" alt="Misskey_icon" width="1em"/></a
             >
           </span>
           <span class="line">
@@ -213,6 +215,7 @@ const {
             class="btn text-white"
             href="https://donshare.net/share.html?text="
             onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
+            aria-label="Mastodon"
             ><i class="fab fa-mastodon fa-fw"></i></a
           >
         </span>
@@ -220,7 +223,8 @@ const {
           <a
             href="https://misskeyshare.link/share.html?text="
             onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
-            ><img src="/mi.webp" /></a
+            aria-label="Misskey"
+            ><img src="/mi.webp" alt="Misskey_icon" width="1em"/></a
           >
         </span>
         <span class="line">
