--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -130,7 +130,7 @@ const {
               href="https://misskeyshare.link/share.html?text="
               onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
               aria-label="Misskey"
-              ><img src="/mi.webp" style="" alt="Misskey_icon" width="1em"/></a
+              ><img src="/mi.webp" style="" alt="Misskey_icon" width="20px" height="14px"/></a
             >
           </span>
           <span class="line">
@@ -224,7 +224,7 @@ const {
             href="https://misskeyshare.link/share.html?text="
             onclick="window.open(this.href + encodeURI(decodeURI(document.title)) + '&url=' + encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false; "
             aria-label="Misskey"
-            ><img src="/mi.webp" alt="Misskey_icon" width="1em"/></a
+            ><img src="/mi.webp" alt="Misskey_icon" width="20px" height="14px"/></a
           >
         </span>
         <span class="line">
