--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -18,6 +18,7 @@ const { contents: links } = await cmsBlog.getLinks({
   <nav>
     <SearchForm searchform_text_id="sidebar_searchform_text" />
     <div class="sidebar_private_links">
+      <p>Accounts</p>
       <ul class="">
         <li>
           <a href="/feed.xml" target="_blank" rel="noopener noreferrer">
