--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -17,6 +17,16 @@ const { contents: links } = await cmsBlog.getLinks({
 <div class="sidebar">
   <nav>
     <SearchForm searchform_text_id="sidebar_searchform_text" />
+    <div class="sidebar_feed_and_about">
+      <ul class="">
+        <li>
+          <a href="/feed.xml" target="_blank" rel="noopener noreferrer">
+            <i class="fa-sharp fa-solid fa-rss"></i>RSSフィード</a
+          >
+        </li>
+        <li><a href="/about">プライバシーポリシー</a></li>
+      </ul>
+    </div>
     <div class="sidebar_private_links">
       <p>Accounts</p>
       <ul class="">
