--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -329,6 +329,7 @@ a:focus {
 .pagination ul li {
   display: inline-block;
   list-style: none;
+  font-size: x-large;
 }
 
 .table_of_content_wrapper {
