--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -330,6 +330,7 @@ a:focus {
   display: inline-block;
   list-style: none;
   font-size: xx-large;
+  margin: auto;
 }
 
 .table_of_content_wrapper {
