--- a/src/pages/posts/[blogId].astro
+++ b/src/pages/posts/[blogId].astro
@@ -66,8 +66,8 @@ $("img").each((index, elm) => {
   if (src && src.includes("https://images.microcms-assets.io/assets/")) {
     // クエリパラメータを削除
     const srcWithoutQuery = src.split("?")[0];
-    // auto=format パラメータ
-    const webpQueryParam = "?auto=format";
+    // fm=webp パラメータ
+    const webpQueryParam = "?fm=webp";
     // classにlazyloadを追加
     $(elm).addClass("lazyload");
     // srcを削除
