img preload test

--- a/src/components/PreloadFirstPostEyecatch.astro
+++ b/src/components/PreloadFirstPostEyecatch.astro
@@ -8,7 +8,7 @@ const { posts } = Astro.props;
       <link
         rel="preload"
         as="image"
-        href={`${post.eyecatch.url}?fm=webp&fit=crop&crop=top&w=720&h=360`}
+        href={`${post.eyecatch.url}?fm=webp`}
       />
     ) : null
   )
