--- a/src/components/PreloadFirstPostEyecatch.astro
+++ b/src/components/PreloadFirstPostEyecatch.astro
@@ -1,15 +1,27 @@
 ---
 const { posts } = Astro.props;
+const href_list = [
+  `?fm=webp&w=640 640w`,
+  `?fm=webp&w=750 750w`,
+  `?fm=webp&w=828 828w`,
+  `?fm=webp&w=1080 1080w`,
+  `?fm=webp&w=1200 1200w`,
+  `?fm=webp&w=1920 1920w`,
+  `?fm=webp&w=2048 2048w`,
+  `?fm=webp&w=3840 3840w`,
+];
 ---
 
 {
   posts.map((post: any, index: number) =>
-    post.eyecatch && (index === 0 || index === 1) ? (
-      <link
-        rel="preload"
-        as="image"
-        href={`${post.eyecatch.url}?fm=webp`}
-      />
-    ) : null
+    post.eyecatch && (index === 0 || index === 1)
+      ? href_list.map((href) => {
+          <link
+            rel="preload"
+            as="image"
+            href={post.eyecatch.url + href}
+          />;
+        })
+      : null
   )
 }
