--- a/src/components/PreloadFirstPostEyecatch.astro
+++ b/src/components/PreloadFirstPostEyecatch.astro
@@ -1,14 +1,14 @@
 ---
 const { posts } = Astro.props;
 const href_list = [
-  `?fm=webp&fit=crop&crop=top&w=640&h=320 640w`,
-  `?fm=webp&fit=crop&crop=top&w=750&h=375 750w`,
-  `?fm=webp&fit=crop&crop=top&w=828&h=414 828w`,
-  `?fm=webp&fit=crop&crop=top&w=1080&h=540 1080w`,
-  `?fm=webp&fit=crop&crop=top&w=1200&h=600 1200w`,
-  `?fm=webp&fit=crop&crop=top&w=1920&h=960 1920w`,
-  `?fm=webp&fit=crop&crop=top&w=2048&h=1024 2048w`,
-  `?fm=webp&fit=crop&crop=top&w=3840&h=1920 3840w`,
+  `?fm=webp&fit=crop&crop=top&w=640&h=320`,
+  `?fm=webp&fit=crop&crop=top&w=750&h=375`,
+  `?fm=webp&fit=crop&crop=top&w=828&h=414`,
+  `?fm=webp&fit=crop&crop=top&w=1080&h=540`,
+  `?fm=webp&fit=crop&crop=top&w=1200&h=600`,
+  `?fm=webp&fit=crop&crop=top&w=1920&h=960`,
+  `?fm=webp&fit=crop&crop=top&w=2048&h=1024`,
+  `?fm=webp&fit=crop&crop=top&w=3840&h=1920`,
 ];
 ---
 
